# atlantis-hackathon

./: .gitignore  README.md  atlantis
atlantis-executables/: Dockerfile  atlantis.darwin  atlantis.docker  atlantis.linux
examples/python-atlantis-solution/: Dockerfile  Justfile  README.md  main.py  pyproject.toml
examples/rust-atlantis-solution/: Cargo.toml  Dockerfile  Justfile  README.md
examples/rust-atlantis-solution/src/: main.rs
