[tool.poetry]
name = "python-atlantis-solution"
version = "0.1.0"
description = "An example atlantis solution"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
