[package]
name = "rust-atlantis-solution"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.104", features = ["serde_derive"] }
serde_json = "^1.0.47"
anyhow = "1.0.26"
serde_derive = "1.0.104"
